# bzip2stream

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
bzip2stream/: bzip2stream.hpp  bzip2stream.ipp
cmake/: Config.cmake.in  hunter.cmake
test/: CMakeLists.txt  bzip2_stream_test.cpp
